# boostapi

./: .coverage  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  _test_import.py  alembic.ini  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/boostapi/: __init__.py  _version.py  cli.py
src/boostapi/app/: __init__.py  main.py
src/boostapi/app/api/: deps.py
src/boostapi/app/api/endpoints/: auth.py  health.py
src/boostapi/app/api/schemas/: auth.py
src/boostapi/app/core/: config.py  security.py
src/boostapi/app/db/: database.py  models.py
src/boostapi/app/services/: auth.py
src/boostapi/app/utils/: logger.py
src/boostapi/migrations/: env.py
tests/: conftest.py
tests/test_api/: test_auth.py
